the grid is generated with a module function, and the reference to each field is saved in an array, also added an event listener to each field

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ main, header {
     font-size: 30px;
 }
 
-#gameBoard {
+#game-board {
     display: grid;
     grid-template-columns: repeat(3, 130px);
     grid-template-rows: repeat(3, 130px);
